refactor: 변수명 및 타입 변경