@@ -1,7 +1,6 @@
 package com.lgcns.bebee.match.presentation.dto.res;
 
-import com.lgcns.bebee.match.application.usecase.GetReviewKeywordsUseCase;
-import com.lgcns.bebee.match.domain.entity.vo.Keyword;
+import com.lgcns.bebee.match.application.usecase.GetReviewKeywordsListUseCase;
 import io.swagger.v3.oas.annotations.media.Schema;
 import lombok.AccessLevel;
 import lombok.AllArgsConstructor;
@@ -14,11 +13,11 @@ import java.util.stream.Collectors;
 @Getter
 @AllArgsConstructor(access = AccessLevel.PRIVATE)
 @NoArgsConstructor
-@Schema(description = "키워드 정보")
+@Schema(description = "선택 가능한 키워드 목록 조회")
 public class ReviewKeywordResDTO {
 
     @Schema(description = "키워드 ID", example = "1")
-    private Long keywordId;
+    private Integer keywordId;
 
     @Schema(description = "키워드 설명", example = "시간 약속 잘 지켜요")
     private String description;
@@ -26,13 +25,13 @@ public class ReviewKeywordResDTO {
     @Schema(description = "긍정 키워드 여부", example = "true")
     private Boolean isPositive;
 
-    public static List<ReviewKeywordResDTO> fromList(List<GetReviewKeywordsUseCase.KeywordDTO> keywords) {
+    public static List<ReviewKeywordResDTO> fromList(List<GetReviewKeywordsListUseCase.KeywordDTO> keywords) {
         return keywords.stream()
                 .map(keyword -> new ReviewKeywordResDTO(
-                        keyword.getKeywordId().longValue(), // Integer → Long 변환
+                        keyword.getKeywordId(), // Integer → Long 변환
                         keyword.getDescription(),
                         keyword.getIsPositive()
                 ))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
